Design package structure for distribution

--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
   "name": "@markmirror/core",
-  "main": "./src/index.ts"
+  "dependencies": {
+    "@codemirror/commands": "^0.20.0",
+    "@codemirror/lang-css": "^0.20.0",
+    "@codemirror/lang-html": "^0.20.0",
+    "@codemirror/lang-javascript": "^0.20.1",
+    "@codemirror/lang-markdown": "^0.20.0",
+    "@codemirror/language": "^0.20.2",
+    "@codemirror/state": "^0.20.0",
+    "@codemirror/view": "^0.20.0",
+    "@lezer/common": "^0.16.1",
+    "@lezer/highlight": "^0.16.0",
+    "@lezer/markdown": "^0.16.1"
+  }
 }
