--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
   "name": "@markmirror/core",
+  "version": "0.1.0",
+  "description": "The fundamentals of the MarkMirror Markdown editor",
+  "author": {
+    "name": "Hsiaoming Yang",
+    "email": "me@lepture.com",
+    "url": "https://lepture.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/markmirror/core.git"
+  },
+  "keywords": [
+    "markdown",
+    "editor"
+  ],
+  "type": "module",
+  "module": "index.js",
+  "license": "MIT",
   "dependencies": {
     "@codemirror/commands": "^0.20.0",
     "@codemirror/lang-css": "^0.20.0",
